# Control-and-Simulation-of-Robots

./: .gitignore  CMakeLists.txt  package.xml  setup_elektron_only_workspace.sh  setup_gazebo_elektron_workspaces.sh
config/: elektron_Tower_control.yaml
lab1/csv_files/: mappose_mala_predkosc.csv  mappose_srednia_predkosc.csv  mappose_wysoka_predkosc.csv  odom_mala_predkosc.csv
launch/: tiago_amcl.launch  tiago_house.launch  tiago_navi.launch  velmobil_navigation.launch
launch/includes/: elektron.launch.xml
manipulation/: CMakeLists.txt  Projekt1.md  README.md  notatka-doors.md  notatka.txt  package.xml
manipulation/data/: doors.bt  octomap_door.bt  octomap_lab.bt
manipulation/doc/: Projekt2.md
manipulation/launch/: doors.launch  octomap_offline_server.launch  sim.launch  tables.launch
manipulation/rviz/: tables.rviz
manipulation/scripts/: check_states.py  jmove.py  mug_position.py  pick_and_place.py  tables.py  test_cimp_pose.py  test_grippers.py  test_head.py
mobile/: README_LAB3.md
mobile/launch/: tiago_amcl.launch  tiago_corridor.launch
mobile/param/: abc.yaml  global_planner.yaml  local_costmap_params.yaml
mobile/rviz/: navi.rviz
mobile/worlds/: corridor.world
param/: global_costmap_params.yaml  local_costmap_params.yaml  local_planner_params.yaml
rviz/: lab3.rviz  simple.rviz
scripts/: navi.cpp  p.cpp  talker.py  trans_pub.py  wysoka_predkosc.bag  zad1.py  zad2.py
scripts/lab1/: zad1.py
worlds/: corridor.world  house.world  map.world  mapa1.world
worlds/dom1/: model.config  model.sdf
worlds/house/: model.sdf
(+29 files in other folders)
